# neisse-graph-visualiser-block

./: README.md  graph_visualisation.html  pyproject.toml
src/neisse-graph-visualiser-block/: __init__.py
src/neisse-graph-visualiser-block/templates/: blockVisualiser.html
src/nessie_graph_visualiser_block/: __init__.py
src/nessie_graph_visualiser_block/templates/: blockVisualiser.html
