[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-plugin"
version = "0.1.0"
description = "My Nessie Plugin"
requires-python = ">=3.9"
dependencies = [
    "nessie-api @ git+https://github.com/Nessie-org/nessie-api.git",
]
[tool.hatch.metadata]
allow-direct-references = true  

[tool.hatch.build.targets.wheel]
packages = ["src/neisse-graph-visualiser-blocks"]
